environments/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techitfactory
  labels:
    name: techitfactory
    environment: dev
